Some memory segments and ISA structure added

--- a/rose/Makefile
+++ b/rose/Makefile
@@ -1,11 +1,24 @@
 .PHONY: all clean
 
-CFLAGS += -Wall
+CFLAGS += -Wall -g
 CPPFLAGS += -I../include
 
 all: rose
 
-rose: rose.o module.o
+rose: rose.o module.o debug.o thread.o isa.o stack.o text.o \
+ptbl.o exp.o sym.o isa.o
+
+isa.c: isa_desc.c isa_tbl.c
+
+isa_desc.c: ../doc/isa.dsc
+	./isa_gen.pl
+
+isa_tbl.c: ../doc/isa.dsc
+	./isa_gen.pl
 
 clean:
-	rm -f *.o
+	rm -f *.o rose
+
+clean-all: clean
+	rm -f isa_tbl.c
+
