--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 *.o
 *.rmd
-ras/dirmap.c
-ras/instr.c
-ras/instr.gperf
 tags
 .exrc
 ras/ras
+ras/dirmap.c
+ras/instr.c
+ras/instr.gperf
 rose/rose
+rose/isa_tbl.c
