All reference code merged into 1 file.
It is better to keep this code in one place, because I have not
to export internal functions about address tables and catalog.
Moreover, it simplifies providing another implementation.

--- a/rose/Makefile
+++ b/rose/Makefile
@@ -6,7 +6,7 @@ CPPFLAGS += -I../include
 all: rose
 
 rose: rose.o module.o debug.o thread.o stack.o text.o \
- ptbl.o exp.o sym.o cnst.o addr.o ref.o addrcat.o addrtbl.o str.o
+ ptbl.o exp.o sym.o cnst.o addr.o ref.o str.o
 
 isa_desc.c: ../doc/isa.dsc
 	./isa_gen.pl
@@ -27,8 +27,6 @@ depend:
 
 # DEPENDENCIES
 addr.o: addr.c addr.h ../include/rmd.h
-addrcat.o: addrcat.c addrcat.h conf.h addrtbl.h
-addrtbl.o: addrtbl.c addrtbl.h conf.h
 cnst.o: cnst.c cnst.h ../include/rmd.h
 debug.o: debug.c debug.h compiler.h
 exp.o: exp.c exp.h ../include/rmd.h
@@ -40,7 +38,7 @@ isa_tbl.o: isa_tbl.c
 module.o: module.c module.h ../include/rmd.h exp.h ptbl.h cnst.h \
  addr.h text.h sym.h str.h
 ptbl.o: ptbl.c ptbl.h ../include/rmd.h
-ref.o: ref.c ref.h addrcat.h conf.h addrtbl.h compiler.h error.h
+ref.o: ref.c ref.h conf.h compiler.h error.h
 rose.o: rose.c module.h ../include/rmd.h exp.h ptbl.h cnst.h addr.h \
  text.h sym.h str.h thread.h stack.h debug.h compiler.h conf.h
 stack.o: stack.c stack.h debug.h compiler.h conf.h
