--- a/rose/Makefile
+++ b/rose/Makefile
@@ -1,7 +1,8 @@
 .PHONY: all clean clean-all depend
 
 CFLAGS += -Wall -g
-CPPFLAGS += -I../common
+CPPFLAGS += -I../common -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include
+LDFLAGS += -lglib-2.0
 
 all: rose
 
@@ -26,22 +27,21 @@ depend:
 
 # DEPENDENCIES
 array.o: array.c array.h object.h error.h ref.h
-debug.o: debug.c debug.h ../common/compiler.h
-error.o: error.c error.h stack.h debug.h ../common/compiler.h conf.h
-isa.o: isa.c thread.h stack.h debug.h ../common/compiler.h conf.h \
- module.h ../common/rmd.h exp.h ptbl.h mtbl.h imp.h cnst.h addr.h \
- text.h sym.h str.h ref.h array.h object.h error.h isa_desc.c \
- isa_tbl.c
+debug.o: debug.c debug.h ../common/compiler.h segment.h \
+ ../common/rmd.h
+error.o: error.c error.h stack.h debug.h ../common/compiler.h \
+ segment.h ../common/rmd.h conf.h
+isa.o: isa.c thread.h stack.h debug.h ../common/compiler.h segment.h \
+ ../common/rmd.h conf.h module.h ref.h array.h object.h error.h \
+ isa_desc.c isa_tbl.c
 isa_desc.o: isa_desc.c
 isa_tbl.o: isa_tbl.c
-module.o: module.c module.h ../common/rmd.h exp.h ptbl.h mtbl.h imp.h \
- cnst.h addr.h text.h sym.h str.h
+module.o: module.c module.h segment.h ../common/rmd.h error.h
 ref.o: ref.c ref.h ../common/compiler.h error.h conf.h
-rose.o: rose.c module.h ../common/rmd.h exp.h ptbl.h mtbl.h imp.h \
- cnst.h addr.h text.h sym.h str.h thread.h stack.h debug.h \
- ../common/compiler.h conf.h
-stack.o: stack.c stack.h debug.h ../common/compiler.h conf.h
+rose.o: rose.c module.h segment.h ../common/rmd.h thread.h stack.h \
+ debug.h ../common/compiler.h conf.h
+stack.o: stack.c stack.h debug.h ../common/compiler.h segment.h \
+ ../common/rmd.h conf.h
 thread.o: thread.c thread.h stack.h debug.h ../common/compiler.h \
- conf.h module.h ../common/rmd.h exp.h ptbl.h mtbl.h imp.h cnst.h \
- addr.h text.h sym.h str.h isa.c ref.h array.h object.h error.h \
- isa_desc.c isa_tbl.c
+ segment.h ../common/rmd.h conf.h module.h isa.c ref.h array.h \
+ object.h error.h isa_desc.c isa_tbl.c
