Directory 'common' splitted up to 'include' and 'lib'

--- a/ras/Makefile
+++ b/ras/Makefile
@@ -1,10 +1,10 @@
 all: ras
 DESCR = ../doc/isa.dsc
 
-CPPFLAGS += -I../common
+CPPFLAGS += -I../include
 #LANG=C
 
-ras: main.o storage.o ras-lex.o hash.o ../common/mm.o cstring.o sect.o print.o
+ras: main.o storage.o ras-lex.o hash.o ../lib/mm.o cstring.o sect.o print.o
 	$(CC) $(LDFLAGS) -o $@ $^
 
 ras-lex.l: ras-head.l ras-tail.l gen.pl $(DESCR)
