--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,6 +1,6 @@
 .PHONY: all clean
 
-all: hello-1.0.rmd hello-1.1.rmd add.rmd print.rmd
+all: hello.rmd print.rmd
 
 %.rmd: %.ras
 	../ras/ras $^ -o $@
