New library to work with module search pathes.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -2,7 +2,7 @@ CPPFLAGS += -I../include
 
 all: librose.a
 
-librose.a: symtbl.o mm.o symbol.o
+librose.a: symtbl.o mm.o symbol.o loader.o
 	$(AR) crs $@ $^
 
 debug:   CPPFLAGS += -DDEBUG
