Module loading mostly done

--- a/rose/Makefile
+++ b/rose/Makefile
@@ -1,12 +1,14 @@
 .PHONY: all clean clean-all depend
 
 CFLAGS += -Wall -g
-CPPFLAGS += -I../include -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include
-LDFLAGS += -lglib-2.0
+LDFLAGS += -g
+CPPFLAGS += -I../include
+LIBS += -L../lib -lrose
 
 all: rose
 
-rose: rose.o module.o debug.o thread.o stack.o ref.o error.o array.o disas.o
+rose: rose.o module.o
+	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
 
 isa_desc.c: ../doc/isa.dsc
 	./isa_gen.pl
@@ -34,22 +36,3 @@ depend:
 	@gcc $(CPPFLAGS) -MM *.c
 
 # DEPENDENCIES
-array.o: array.c array.h object.h error.h ref.h
-debug.o: debug.c debug.h ../include/compiler.h segment.h \
- ../include/rmd.h
-error.o: error.c error.h stack.h debug.h ../include/compiler.h \
- segment.h ../include/rmd.h conf.h
-isa.o: isa.c thread.h stack.h debug.h ../include/compiler.h segment.h \
- ../include/rmd.h conf.h module.h ref.h array.h object.h error.h \
- isa_desc.c isa_tbl.c
-isa_desc.o: isa_desc.c
-isa_tbl.o: isa_tbl.c
-module.o: module.c module.h segment.h ../include/rmd.h error.h
-ref.o: ref.c ref.h ../include/compiler.h error.h conf.h
-rose.o: rose.c module.h segment.h ../include/rmd.h thread.h stack.h \
- debug.h ../include/compiler.h conf.h
-stack.o: stack.c stack.h debug.h ../include/compiler.h segment.h \
- ../include/rmd.h conf.h
-thread.o: thread.c thread.h stack.h debug.h ../include/compiler.h \
- segment.h ../include/rmd.h conf.h module.h isa.c ref.h array.h \
- object.h error.h isa_desc.c isa_tbl.c
