File schemes added.
"file:" and "rose:" supported. Also, standard streams:
rose:/{stdin,stdout,stderr}.

--- a/rose/Makefile
+++ b/rose/Makefile
@@ -7,7 +7,7 @@ LIBS += -L../lib -lrose
 
 all: rose
 
-rose: rose.o module.o thread.o cpu.o heap.o config.o array.o object.o file.o
+rose: rose.o module.o thread.o cpu.o heap.o config.o array.o object.o file.o file_rose.o
 	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
 
 cpu.o: instr.h
