platform-independent module loading

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,6 +1,6 @@
 all: librose.a
 
-librose.a: symtbl.o mm.o symbol.o loader.o cmdopt.o
+librose.a: symtbl.o mm.o loader.o cmdopt.o
 	$(AR) crs $@ $^
 
 debug:   CPPFLAGS += -DDEBUG
